{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 18,
  "lineage": "e3882287-d5dc-3be5-23f6-08e74ef47756",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:243213547572:internet-gateway/igw-0ef25645b1c21d977",
            "id": "igw-0ef25645b1c21d977",
            "owner_id": "243213547572",
            "tags": {
              "Name": "vpc-tr"
            },
            "vpc_id": "vpc-09ee496d7c7d7922a"
          },
          "dependencies": [
            "aws_vpc.chris-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:243213547572:network-acl/acl-0a8d7037e3fc323aa",
            "egress": [],
            "id": "acl-0a8d7037e3fc323aa",
            "ingress": [],
            "owner_id": "243213547572",
            "subnet_ids": [
              "subnet-0ea1bee2895078b79"
            ],
            "tags": {
              "Name": "vpc-tr-public"
            },
            "vpc_id": "vpc-09ee496d7c7d7922a"
          },
          "dependencies": [
            "aws_subnet.public_1",
            "aws_vpc.chris-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_egress_100",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2754421334",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a8d7037e3fc323aa",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.public_1",
            "aws_vpc.chris-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_egress_101",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1705246102",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a8d7037e3fc323aa",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": 80
          },
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.public_1",
            "aws_vpc.chris-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_egress_102",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": true,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4232158103",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a8d7037e3fc323aa",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 102,
            "to_port": 22
          },
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.public_1",
            "aws_vpc.chris-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_ingress_100",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3459166755",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a8d7037e3fc323aa",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.public_1",
            "aws_vpc.chris-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_ingress_101",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1435237964",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a8d7037e3fc323aa",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": 65535
          },
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.public_1",
            "aws_vpc.chris-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_ingress_102",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-571813052",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a8d7037e3fc323aa",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 102,
            "to_port": 80
          },
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.public_1",
            "aws_vpc.chris-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_ingress_103",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3115344083",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a8d7037e3fc323aa",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 103,
            "to_port": 443
          },
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.public_1",
            "aws_vpc.chris-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_ingress_104",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 8888,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3441985884",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a8d7037e3fc323aa",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 104,
            "to_port": 8888
          },
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.public_1",
            "aws_vpc.chris-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-069cc61a8b2ab5ec1",
            "owner_id": "243213547572",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-tr-private-route"
            },
            "vpc_id": "vpc-09ee496d7c7d7922a"
          },
          "dependencies": [
            "aws_vpc.chris-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06d55b1c58a24b4db",
            "owner_id": "243213547572",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ef25645b1c21d977",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-tr-public-route"
            },
            "vpc_id": "vpc-09ee496d7c7d7922a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.chris-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e16f4df443772597",
            "route_table_id": "rtb-069cc61a8b2ab5ec1",
            "subnet_id": "subnet-0ce092700de21f330"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_vpc.chris-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0400f05365f39c026",
            "route_table_id": "rtb-06d55b1c58a24b4db",
            "subnet_id": "subnet-0ea1bee2895078b79"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.chris-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:243213547572:subnet/subnet-0ce092700de21f330",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-0ce092700de21f330",
            "map_public_ip_on_launch": false,
            "owner_id": "243213547572",
            "tags": {
              "Name": "vpc-tr-private1"
            },
            "vpc_id": "vpc-09ee496d7c7d7922a"
          },
          "dependencies": [
            "aws_vpc.chris-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:243213547572:subnet/subnet-0ea1bee2895078b79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0ea1bee2895078b79",
            "map_public_ip_on_launch": true,
            "owner_id": "243213547572",
            "tags": {
              "Name": "vpc-tr-public1"
            },
            "vpc_id": "vpc-09ee496d7c7d7922a"
          },
          "dependencies": [
            "aws_vpc.chris-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "chris-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:243213547572:vpc/vpc-09ee496d7c7d7922a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04397cc4987c06ca4",
            "default_route_table_id": "rtb-0abe28d7b62d15ad8",
            "default_security_group_id": "sg-08cbdb9c91a10fc42",
            "dhcp_options_id": "dopt-e29cac84",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09ee496d7c7d7922a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0abe28d7b62d15ad8",
            "owner_id": "243213547572",
            "tags": {
              "Name": "vpc-tr"
            }
          }
        }
      ]
    }
  ]
}